# rust-weechat

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md
sample/: Cargo.toml
sample/src/: lib.rs
weechat/: Cargo.toml  README.md
weechat-macro/: Cargo.toml  README.md
weechat-macro/src/: lib.rs
weechat-rs/: Cargo.toml  README.md
weechat-rs/examples/go/: Cargo.toml  README.md
weechat-rs/examples/go/src/: lib.rs
weechat-rs/examples/grep/: Cargo.toml  README.md
weechat-rs/examples/grep/src/: buffer.rs  lib.rs
weechat-rs/examples/sample/: Cargo.toml  Makefile  README.md
weechat-rs/examples/sample/src/: lib.rs
weechat-rs/src/: bar.rs  buffer.rs  completion.rs  config.rs  config_macros.rs  config_options.rs  executor.rs  hashtable.rs  hdata.rs  hooks.rs  infolist.rs  lib.rs  weechat.rs
weechat-rs/src/buffer/: lines.rs  mod.rs  nick.rs  nickgroup.rs
weechat-rs/src/config/: boolean.rs  color.rs  config.rs  config_options.rs  integer.rs  mod.rs  section.rs  string.rs
weechat-rs/src/hooks/: commands.rs  completion.rs  fd.rs  mod.rs  modifier.rs  signal.rs  timer.rs
weechat-sys/: Cargo.toml  LICENSE.md  README.md  build.rs
weechat-sys/src/: lib.rs
weechat/examples/go/: Cargo.toml  Makefile  README.md
weechat/examples/go/src/: lib.rs
weechat/examples/grep/: Cargo.toml  Makefile
weechat/examples/grep/src/: buffer.rs  lib.rs
weechat/examples/infolist/: Cargo.toml  Makefile  README.md
weechat/examples/infolist/src/: lib.rs
weechat/examples/sample/: Cargo.toml  README.md
weechat/examples/sample/src/: lib.rs
weechat/src/: config_macros.rs  executor.rs  hashtable.rs  hdata.rs  infolist.rs  lib.rs  weechat.rs
weechat/src/buffer/: lines.rs  mod.rs  nick.rs  nickgroup.rs  window.rs
weechat/src/config/: boolean.rs  color.rs  config.rs  config_options.rs  integer.rs  mod.rs  section.rs  string.rs
weechat/src/hooks/: bar.rs  commands.rs  completion.rs  fd.rs  mod.rs  modifier.rs  signal.rs  timer.rs
