[package]
name = "weechat-macro"
version = "0.3.1"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "Procedural macros for the weechat crate"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/poljar/rust-weechat"

[lib]
proc-macro = true

[dependencies]
libc = "0.2.76"
syn = "1.0.39"
proc-macro2 = "1.0.20"
quote = "1.0.7"

[dev-dependencies]
weechat = { path = "../weechat" }
