[package]
name = "weechat-macro"
version = "0.4.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "Procedural macros for the weechat crate"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/poljar/rust-weechat"

[lib]
proc-macro = true

[dependencies]
libc = "0.2.79"
syn = "1.0.43"
proc-macro2 = "1.0.24"
quote = "1.0.7"

[dev-dependencies]
weechat = { path = "../weechat" }
