[package]
name = "weechat"
version = "0.1.0"
authors = [
    "KokaKiwi <kokakiwi@kokakiwi.net>",
    "Damir Jelić <poljar@termina.org.uk>"
]

repository = "https://github.com/poljar/rust-weechat/"
homepage = "https://github.com/poljar/rust-weechat/"
edition = "2018"

description = "Weechat API bindings for Rust"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[features]
async-executor = ["async-task", "pipe-channel", "futures", "async-trait"]
unstable = []

[dependencies]
libc = "0.2.72"

async-task = { version = "3.0.0", optional = true }
async-trait = { version = "0.1.36", optional = true }
pipe-channel = { version = "1.3.0", optional = true }
futures = { version = "0.3.5", optional = true }

weechat-macro = { path = "../weechat-macro" }
weechat-sys = { path = "../weechat-sys" }

[dev-dependencies]
async-std = { version = "1.6.2", features = [ "unstable" ] }
pipe-channel = "1.3.0"
futures = "0.3.5"
