[package]
name = "weechat"
version = "0.4.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]

repository = "https://github.com/poljar/rust-weechat/"
homepage = "https://github.com/poljar/rust-weechat/"
edition = "2018"

readme = "README.md"
description = "Weechat API bindings for Rust"
license = "MIT"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
# Support to run futures on the Weechat main thread.
async = ["async-task", "pipe-channel", "futures", "multitask", "async-trait"]

# Declarative configuration macro.
config_macro = ["paste", "strum"]

# Still unsound or experimental features will be hidden behind this flag.
unsound = []

docs = ["async", "unsound", "config_macro"]

[dependencies]
libc = "0.2.79"

async-task = { version = "4.0.2", optional = true }
multitask = { version = "0.2.0", optional = true }
async-trait = { version = "0.1.41", optional = true }
pipe-channel = { version = "1.3.0", optional = true }
futures = { version = "0.3.6", optional = true }
paste = { version = "1.0.1", optional = true }
strum = { version = "0.19.5", optional = true }

weechat-macro = { version = "0.4.0", path = "../weechat-macro" }
weechat-sys = { version = "0.4.0", path = "../weechat-sys" }

[dev-dependencies]
async-std = { version = "1.6.5", features = [ "unstable" ] }
pipe-channel = "1.3.0"
strum = "0.19.5"
strum_macros = "0.19.4"
futures = "0.3.6"
