[package]
name = "weechat"
version = "0.4.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]

repository = "https://github.com/poljar/rust-weechat/"
homepage = "https://github.com/poljar/rust-weechat/"
edition = "2018"

readme = "README.md"
description = "Weechat API bindings for Rust"
license = "MIT"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
# Support to run futures on the Weechat main thread.
async = ["async-task", "pipe-channel", "futures", "async-trait"]

# Declarative configuration macro.
config_macro = ["paste", "strum"]

# Still unsound or experimental features will be hidden behind this flag.
unsound = []

docs = ["async", "unsound", "config_macro"]

[dependencies]
libc = "0.2.82"

backtrace = "0.3.56"
async-task = { version = "4.0.3", optional = true }
async-trait = { version = "0.1.42", optional = true }
pipe-channel = { version = "1.3.0", optional = true }
futures = { version = "0.3.12", optional = true }
paste = { version = "1.0.4", optional = true }
strum = { version = "0.20.0", optional = true }

weechat-macro = { version = "0.4.0", path = "../weechat-macro" }
weechat-sys = { version = "0.4.0", path = "../weechat-sys" }

[dev-dependencies]
async-std = "1.9.0"
pipe-channel = "1.3.0"
strum = "0.20.0"
strum_macros = "0.20.1"
futures = "0.3.12"
