[package]
name = "weechat-go"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
name = "go"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.72"
fuzzy-matcher = "0.3.5"
weechat = { path = "../../", features = ["config-macro", "unsound"]}
weechat-sys = { path = "../../../weechat-sys" }

[workspace]

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'
