[package]
name = "weechat-go"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
name = "go"
crate-type = ["cdylib"]

[dependencies]
fuzzy-matcher = "0.3.5"
weechat = { path = "../../", features = ["config_macro", "unsound"]}

[workspace]

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'
