[package]
name = "weechat-ripgrep"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
name = "ripgrep"
crate-type = ["dylib"]

[dependencies]
grep-searcher = "0.1.7"
grep-matcher = "0.1.4"
grep-regex = "0.1.8"

tokio = { version = "0.2.21", features = [ "rt-threaded", "sync" ] }
async-trait = "0.1.36"

[dependencies.weechat]
path = "../../"
features = ["async"]

[dependencies.clap]
version = "2.33.1"
default-features = false
features = [ "suggestions" ]
